# Rastreador_de_systemcalls

./: README.md  prog.sh
Documentacion/: Documentacion.md
prog/: Cargo.toml
prog/src/: main.rs
rastreador/: Cargo.toml
rastreador/src/: main.rs  sysdecode.rs
