[package]
name = "rastreador"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.27", default-features = false, features = ["process", "ptrace", "signal", "uio", "user"] }
libc = "0.2"
crossterm = "0.27"
thiserror = "1"
anyhow = "1"
once_cell = "1"
